// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render AddAdmins with dropdown 1`] = `
<div
  className="admin-module"
>
  <div
    className="admin-section__header"
  >
    Add Project Admin
  </div>
  <div
    className="admin-section"
  >
    <div
      className="add-admin"
    >
      <form
        className="add-admin__input-form"
        id="add-admin-form"
        onSubmit={[Function]}
      >
        <Dropdown
          baseClassName="Dropdown"
          onChange={[Function]}
          options={
            Array [
              "Project",
              "Project2",
            ]
          }
          value="Project"
        />
        <input
          className="add-admin__input add-admin__email"
          contentEditable={true}
          placeholder="Google account email"
        />
        <button
          className="btn btn--secondary btn--shine btn--add"
          type="submit"
        >
          +
        </button>
      </form>
    </div>
  </div>
  <div
    className="admin-expandable-area-container expandable-app-admin-area"
  >
    <div
      className="admin-expandable-area"
    >
      <div
        className="admin-area__item"
        key="email"
      >
        <div
          className="admin-area__item-text"
        >
          email
        </div>
        <button
          className="admin-area__item-remove"
          onClick={[Function]}
        >
          ✕
        </button>
      </div>
      <div
        className="admin-area__item"
        key="email2"
      >
        <div
          className="admin-area__item-text"
        >
          email2
        </div>
        <button
          className="admin-area__item-remove"
          onClick={[Function]}
        >
          ✕
        </button>
      </div>
    </div>
  </div>
  <div
    className="admin-section__footer"
    onClick={[Function]}
  >
    View admins
    <div
      className="chevron-logo-container admin-chevron"
    >
      <svg
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`should render AddAdmins with no dropdown 1`] = `
<div
  className="admin-module"
>
  <div
    className="admin-section__header"
  >
    Add Project Admin
  </div>
  <div
    className="admin-section"
  >
    <div
      className="add-admin"
    >
      <form
        className="add-admin__input-form"
        id="add-admin-form"
        onSubmit={[Function]}
      >
        <div
          className="add-admin__project-name"
        >
          Project
        </div>
        <input
          className="add-admin__input add-admin__email"
          contentEditable={true}
          placeholder="Google account email"
        />
        <button
          className="btn btn--secondary btn--shine btn--add"
          type="submit"
        >
          +
        </button>
      </form>
    </div>
  </div>
  <div
    className="admin-expandable-area-container expandable-app-admin-area"
  >
    <div
      className="admin-expandable-area"
    >
      <div
        className="admin-area__item"
        key="email"
      >
        <div
          className="admin-area__item-text"
        >
          email
        </div>
        <button
          className="admin-area__item-remove"
          onClick={[Function]}
        >
          ✕
        </button>
      </div>
      <div
        className="admin-area__item"
        key="email2"
      >
        <div
          className="admin-area__item-text"
        >
          email2
        </div>
        <button
          className="admin-area__item-remove"
          onClick={[Function]}
        >
          ✕
        </button>
      </div>
    </div>
  </div>
  <div
    className="admin-section__footer"
    onClick={[Function]}
  >
    View admins
    <div
      className="chevron-logo-container admin-chevron"
    >
      <svg
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
        />
      </svg>
    </div>
  </div>
</div>
`;
